Fixed PDF screenshots height on mobile

--- a/_sass/figures.scss
+++ b/_sass/figures.scss
@@ -16,6 +16,7 @@ figcaption {
 
   img {
     border: solid $grey-color-light 1px;
+    height: auto;
   }
 }
 
